[package]
name = "rust_music_player"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.26.0"  # egui framework
egui = "0.26.0"    # egui core

# Audio Playback
rodio = "0.17.1"   # Audio playback library
symphonia = { version = "0.5.3", features = ["all"] }  # Audio format support

# File System and Paths
walkdir = "2.4.0"  # Directory walking
path-absolutize = "3.1.1"  # Path utilities

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON serialization

# Utilities
anyhow = "1.0"     # Error handling
thiserror = "1.0"  # Custom error types
chrono = { version = "0.4", features = ["serde"] }  # Time utilities

# Threading and Async
tokio = { version = "1.0", features = ["full"] }  # Async runtime
crossbeam-channel = "0.5"  # Thread communication

# Logging
tracing = "0.1"    # Logging framework
tracing-subscriber = "0.3"  # Logging subscriber 
rfd = "0.14" 